# monorepo

./: LICENSE  README.md
nixos/: README.md  shell.nix
nixos/.config/conky/: conky.conf
nixos/workstation/: configuration.nix  flake.nix  hardware-configuration.nix
nixos/workstation/home-manager/: home.nix
sentinel/: Cargo.toml
sentinel/src/: main.rs
